--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ nav h1 {
   margin: auto;
 }
 nav h1 a {
-  color: #fff;
+  color: blue;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 10px;
