--- a/css/styles.css
+++ b/css/styles.css
@@ -1,80 +1,116 @@
 @charset "utf-8";
 /* CSS Document */
 
-body,td,th,p{
+body,
+td,
+th,
+p {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 	line-height: 1.5;
 }
+
 body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
 }
-ul, li {
+
+ul,
+li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
 }
+
 a {
 	color: orange;
 	text-decoration: none;
 }
-a:hover, a:focus {
+
+a:hover,
+a:focus {
 	color: #3397db;
 	text-decoration: none;
 }
-a img{
+
+a img {
 	border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: Arial, Helvetica, sans-serif;
+	margin: 0 0 20px;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-#maincontent {
-  background-color: #f3f3f3;
-  width: 100vw;
-  min-height: 100%;
-}
-#footer {
-  background-color: #444;
-  color: #aaa;
-  font-size: 8pt;
-  letter-spacing: 1px;
-  padding: 25px;
-  text-align: center;
-  text-transform: uppercase;
-}
-/* ====================== Navigation ====================== */
+
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+header,
+footer,
+hgroup,
+menu,
 nav {
-  width: 100%;
-  height: 80px;
-  background-color: #252831;
-  text-align: center;
-  display: flex;
-  align-items: center;
+	display: grid;
 }
+
+#maincontent {
+	background-color: #f3f3f3;
+	height: 100%;
+	overflow-x: hidden;
+	display: grid;
+}
+
+#footer {
+	background-color: #444;
+	color: #aaa;
+	font-size: 8pt;
+	letter-spacing: 1px;
+	padding: 25px;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+/* ====================== Navigation ====================== */
+
+nav {
+	height: 80px;
+	background-color: #252831;
+	text-align: center;
+}
+
 nav h1 {
-  margin: auto;
+	margin: auto;
 }
+
 nav h1 a {
-  color: blue;
-  font-size: 14pt;
-  font-weight: 200;
-  letter-spacing: 10px;
-  text-transform: uppercase;
+	color: #fff;
+	font-size: 14pt;
+	font-weight: 200;
+	letter-spacing: 10px;
+	text-transform: uppercase;
 }
+
+#breadcrumb-nav {
+    height: 50px;
+}
+
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+	text-align: center;
 }
 
 /* Display list items side by side */
@@ -100,179 +136,279 @@ nav h1 a {
     color: #01447e;
     text-decoration: underline;
 }
+
 /* ====================== Map ====================== */
+
 #map {
-  height: 400px;
-  width: 100%;
-  background-color: #ccc;
+	height: 400px;
+	width: 100%;
+	background-color: #ccc;
 }
+
 /* ====================== Restaurant Filtering ====================== */
+
 .filter-options {
-  width: 100%;
-  height: 50px;
-  background-color: #3397DB;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+	width: 100%;
+	height: 50px;
+	background-color: #3397DB;
+	align-items: center;
 }
+
 .filter-options h2 {
-  color: white;
-  font-size: 1rem;
-  font-weight: normal;
-  line-height: 1;
-  margin: 0 20px;
+	color: white;
+	font-size: 1rem;
+	font-weight: normal;
+	line-height: 1;
+	margin: 0 20px;
 }
+
 .filter-options select {
-  background-color: white;
-  border: 1px solid #fff;
-  font-family: Arial,sans-serif;
-  font-size: 11pt;
-  height: 35px;
-  letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
-  width: 200px;
+	background-color: white;
+	border: 1px solid #fff;
+	font-family: Arial,sans-serif;
+	font-size: 11pt;
+	height: 35px;
+	letter-spacing: 0;
+	margin: 30px;
+	padding: 0 10px;
+	width: 200px;
 }
 
 /* ====================== Restaurant Listing ====================== */
+
 #restaurants-list {
-  background-color: #f3f3f3;
-  list-style: outside none none;
-  margin: 0;
-  padding: 30px 15px 60px;
-  text-align: center;
+	background-color: #f3f3f3;
+	list-style: outside none none;
+	margin: 0;
+	padding: 30px 15px 60px;
+	text-align: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	flex-direction: row;
 }
+
 #restaurants-list li {
-  background-color: #fff;
-  border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
-  text-align: left;
-  width: 270px;
+	background-color: #fff;
+	border: 2px solid #ccc;
+	font-family: Arial,sans-serif;
+	margin: 15px;
+	min-height: 380px;
+	padding: 0 30px 25px;
+	text-align: left;
+	flex-basis: 22%;
 }
+
 #restaurants-list .restaurant-img {
-  background-color: #ccc;
-  display: block;
-  margin: 0;
-  max-width: 100%;
-  min-height: 248px;
-  min-width: 100%;
+	background-color: #ccc;
+	margin: 0;
+	max-width: 100%;
+	min-height: 248px;
 }
+
 #restaurants-list li h1 {
-  color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 14pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  line-height: 1.3;
-  margin: 20px 0 10px;
-  text-transform: uppercase;
+	color: #f18200;
+	font-family: Arial,sans-serif;
+	font-size: 14pt;
+	font-weight: 200;
+	letter-spacing: 0;
+	line-height: 1.3;
+	margin: 20px 0 10px;
+	text-transform: uppercase;
 }
+
 #restaurants-list p {
-  margin: 0;
-  font-size: 11pt;
+	margin: 0;
+	font-size: 11pt;
 }
+
 #restaurants-list li a {
-  background-color: orange;
-  border-bottom: 3px solid #eee;
-  color: #fff;
-  display: inline-block;
-  font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
+	background-color: #e59400;
+	border-bottom: 3px solid #eee;
+	color: #fff;
+	display: inline-block;
+	font-size: 10pt;
+	margin: 15px 0 0;
+	padding: 8px 30px 10px;
+	text-align: center;
+	text-decoration: none;
+	text-transform: uppercase;
 }
 
 /* ====================== Restaurant Details ====================== */
+
 .inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 1000;
 }
+
 .inside #map-container {
-  background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+	height: 400px;
+	margin-top: 130px;
+	width: 100%;
 }
+
 .inside #map {
-  background-color: #ccc;
-  height: 100%;
-  width: 100%;
+	background-color: #ccc;
+	height: 100%;
+	width: 100%;
 }
-.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
-}
+
 #restaurant-name {
-  color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 20pt;
-  font-weight: 200;
-  letter-spacing: 0;
-  margin: 15px 0 30px;
-  text-transform: uppercase;
-  line-height: 1.1;
+	text-align: center;
+	color: #f18200;
+	font-family: Arial,sans-serif;
+	font-size: 20pt;
+	font-weight: 200;
+	letter-spacing: 0;
+	margin: 15px 0 30px;
+	text-transform: uppercase;
+	line-height: 1.1;
 }
+
 #restaurant-img {
-	width: 90%;
+	width: 100%;
+	border-radius: 15px 15px 0 0;
 }
+
 #restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
+	font-size: 12pt;
+	margin: 10px 0px;
 }
+
 #restaurant-cuisine {
-  background-color: #333;
-  color: #ddd;
-  font-size: 12pt;
-  font-weight: 300;
-  letter-spacing: 10px;
-  margin: 0 0 20px;
-  padding: 2px 0;
-  text-align: center;
-  text-transform: uppercase;
-	width: 90%;
+	background-color: #333;
+	color: #ddd;
+	font-size: 12pt;
+	font-weight: 300;
+	letter-spacing: 10px;
+	margin: 0 0 20px;
+	padding: 2px 0;
+	text-align: center;
+	text-transform: uppercase;
+	width: 100%;
+	border-radius: 0 0 15px 15px;
 }
+
 #restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+	border-bottom: 1px solid #d9d9d9;
+	border-top: 1px solid #fff;
+	padding: 40px 30px 30px 30px;
 }
-#reviews-container {
-  padding: 30px 40px 80px;
-}
+
 #reviews-container h2 {
-  color: #f58500;
-  font-size: 24pt;
-  font-weight: 300;
-  letter-spacing: -1px;
-  padding-bottom: 1pt;
+	color: #f58500;
+	font-size: 24pt;
+	font-weight: 300;
+	letter-spacing: -1px;
+	padding-bottom: 1pt;
 }
+
 #reviews-list {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
+
 #reviews-list li {
-  background-color: #fff;
-    border: 2px solid #f3f3f3;
-  display: block;
-  list-style-type: none;
-  margin: 0 0 30px;
-  overflow: hidden;
-  padding: 0 20px 20px;
-  position: relative;
-  width: 85%;
+	background-color: #fff;
+	border: 2px solid #f3f3f3;
+	list-style-type: none;
+	overflow: hidden;
+	padding: 0 20px 20px;
+	margin-top: 20px;
+	width: 85%;
+	border-radius: 15px;
+	display: flex;
+	flex-direction: column;
 }
+
 #reviews-list li p {
-  margin: 0 0 10px;
+	margin: 0 0 10px;
 }
+
+#reviews-list li>p:nth-child(1) {
+	font-size: 18px;
+	width: 100%;
+	padding: 2px;
+	text-align: right;
+	color: #f58500;
+}
+
+#reviews-list li>p:nth-child(2) {
+	width: 100%;
+	text-align: center;
+	color: #a3a3a3;
+}
+
+#reviews-list li>p:nth-child(3) {
+	width: 80px;
+	padding: 3px;
+	border-radius: 5px;
+	background-color: #f58500;
+	color: #fff;
+	text-align: center;
+}
+
+#restaurant-hours {
+	background-color: #fff;
+	width: 90%;
+	border-radius: 15px;
+}
+
 #restaurant-hours td {
-  color: #666;
+	color: #666;
+}
+
+/* ====================== Media Query ====================== */
+
+@media only screen and (max-width: 1100px) {
+	
+	#restaurants-list li {
+		flex-basis: 35%;
+	}
+	
+}
+
+@media only screen and (max-width: 750px) {
+	
+	#restaurants-list li {
+		flex-basis: 80%;
+	}
+	
+	.filter-options {
+		flex-direction: column;
+		width: 100%;
+		height: 150px;
+	}
+	
+	.filter-options h2 {
+		margin: 5px 0;
+	}
+	
+	.filter-options select {
+		margin: 5px;
+		width: 300px;
+	}
+
+	#restaurant-container, #reviews-container {
+		padding: 40px 15px 30px 15px;
+	}
+	
+}
+
+@media only screen and (max-width: 370px) {
+	
+	#restaurants-list li {
+		margin: 5px;
+		padding: 0 20px 15px;
+	}
+	
+	#restaurants-list li {
+		flex-basis: 90%;
+	}
 }
